package B2_Decorator;

import java.util.List;

public interface ITokenize {
  List<String> tokenize();
}
